--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="style.css">
 
     <!-- bootstrap file -->
@@ -19,49 +26,64 @@
 </head>
 
 <body onload="init()">
-    <!-- As a heading -->
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">Quizapp</span>
-        </div>
-    </nav>
     <div class="container">
         <div class="card quiz-card">
-            <img src="img/pencil-gc340154ff_1920.jpg" class="card-img-top">
-            <div class="card-body">
+            <img src="img/brainstorm-gf6dc40ff0_1280.jpg" id="header-image" class="card-img-top">
+            <div class="progress">
+                <div id="percent" class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
+                    aria-valuemin="0" aria-valuemax="100">25%</div>
+            </div>
+            <div class="card-body" id="end-screen" style="display: none;">
+                <div class="text-center final-headline">
+                    Quiz beendet!
+                </div>
+                <div class="text-center">
+                    Du hast <b id="right-question">x</b> von <b id="amount-of-questions">x</b> Fragen richtig
+                    beantwortet.
+                </div>
+                <div class="button-row">
+                    <button onclick="restartGame()" id="restart-button" class="btn btn-primary">Erneut spielen</button>
+                </div>
+            </div>
+
+            <div id="question-body" class="card-body">
+
                 <h5 class="card-title mb-4" id="question-text">Frage</h5>
-                <div class="card mb-2">
-                    <div class="card-body" id="answer-1">
-                        Antwort
+                <div class="answer-container">
+                    <div onclick="answer('answer_1')" class="card mb-2 quiz-answer-card">
+                        <div class="card-body" id="answer_1">
+                            Antwort
+                        </div>
+                    </div>
+                    <div onclick="answer('answer_2')" class="card mb-2 quiz-answer-card">
+                        <div class="card-body" id="answer_2">
+                            Antwort
+                        </div>
+                    </div>
+                    <div onclick="answer('answer_3')" class="card mb-2 quiz-answer-card">
+                        <div class="card-body" id="answer_3">
+                            Antwort
+                        </div>
+                    </div>
+                    <div onclick="answer('answer_4')" class="card mb-2 quiz-answer-card">
+                        <div class="card-body" id="answer_4">
+                            Antwort
+                        </div>
                     </div>
                 </div>
-                <div class="card mb-2">
-                    <div class="card-body" id="answer-2">
-                        Antwort
-                    </div>
-                </div>
-                <div class="card mb-2">
-                    <div class="card-body" id="answer-3">
-                        Antwort
-                    </div>
-                </div>
-                <div class="card mb-2">
-                    <div class="card-body" id="answer-4">
-                        Antwort
-                    </div>
-                </div>
+                <hr class="full-width">
                 <div class="question-footer">
-                    <span>
-                        <b>1</b>von <b id="all-questions">5</b> Fragen
+                    <span class="question-number-container">
+                        <b id="question-number">1</b> von <b id="all-questions">5</b> Fragen
                     </span>
-                    <button class="btn btn-primary">Weiter</button>
+                    <button onclick="nextQuestion()" id="next-button" class="btn btn-primary" disabled>Nächste
+                        Frage</button>
                 </div>
             </div>
         </div>
     </div>
 
     </div>
-    <div id="test"></div>
 </body>
 
 </html>
